// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`the patch parser can handle files with CRLF line breaks 1`] = `
[
  {
    "hash": "3e1267f",
    "hunk": {
      "header": {
        "original": {
          "length": 0,
          "start": 1,
        },
        "patched": {
          "length": 1,
          "start": 1,
        },
      },
      "parts": [
        {
          "lines": [
            "this is a new file
",
          ],
          "noNewlineAtEndOfFile": false,
          "type": "insertion",
        },
      ],
      "source": "@@ -0,0 +1 @@
+this is a new file
",
    },
    "mode": 420,
    "path": "banana.ts",
    "type": "file creation",
  },
]
`;

exports[`the patch parser parses old-style patches 1`] = `
[
  {
    "afterHash": null,
    "beforeHash": null,
    "hunks": [
      {
        "header": {
          "original": {
            "length": 10,
            "start": 41,
          },
          "patched": {
            "length": 11,
            "start": 41,
          },
        },
        "parts": [
          {
            "lines": [
              " */",
              "function isValidNameError(name, node) {",
              "  !(typeof name === 'string') ? (0, _invariant2.default)(0, 'Expected string') : void 0;",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "  if (name.length > 1 && name[0] === '_' && name[1] === '_') {",
              "    return new _GraphQLError.GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);",
              "  }",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "  // if (name.length > 1 && name[0] === '_' && name[1] === '_') {",
              "  //   return new _GraphQLError.GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);",
              "  // }",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "  if (!NAME_RX.test(name)) {",
              "    return new _GraphQLError.GraphQLError('Names must match /^[_a-zA-Z][_a-zA-Z0-9]*$/ but "' + name + '" does not.', node);",
              "  }",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "}",
            ],
            "noNewlineAtEndOfFile": true,
            "type": "context",
          },
        ],
        "source": "@@ -41,10 +41,11 @@ function assertValidName(name) {
  */
 function isValidNameError(name, node) {
   !(typeof name === 'string') ? (0, _invariant2.default)(0, 'Expected string') : void 0;
-  if (name.length > 1 && name[0] === '_' && name[1] === '_') {
-    return new _GraphQLError.GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);
-  }
+  // if (name.length > 1 && name[0] === '_' && name[1] === '_') {
+  //   return new _GraphQLError.GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);
+  // }
   if (!NAME_RX.test(name)) {
     return new _GraphQLError.GraphQLError('Names must match /^[_a-zA-Z][_a-zA-Z0-9]*$/ but "' + name + '" does not.', node);
   }
+
 }
\\ No newline at end of file",
      },
    ],
    "path": "node_modules/graphql/utilities/assertValidName.js",
    "type": "patch",
  },
  {
    "afterHash": null,
    "beforeHash": null,
    "hunks": [
      {
        "header": {
          "original": {
            "length": 9,
            "start": 29,
          },
          "patched": {
            "length": 9,
            "start": 29,
          },
        },
        "parts": [
          {
            "lines": [
              " */",
              "export function isValidNameError(name, node) {",
              "  !(typeof name === 'string') ? invariant(0, 'Expected string') : void 0;",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "  if (name.length > 1 && name[0] === '_' && name[1] === '_') {",
              "    return new GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);",
              "  }",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "  // if (name.length > 1 && name[0] === '_' && name[1] === '_') {",
              "  //   return new GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);",
              "  // }",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "  if (!NAME_RX.test(name)) {",
              "    return new GraphQLError('Names must match /^[_a-zA-Z][_a-zA-Z0-9]*$/ but "' + name + '" does not.', node);",
              "  }",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
        "source": "@@ -29,9 +29,9 @@ export function assertValidName(name) {
  */
 export function isValidNameError(name, node) {
   !(typeof name === 'string') ? invariant(0, 'Expected string') : void 0;
-  if (name.length > 1 && name[0] === '_' && name[1] === '_') {
-    return new GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);
-  }
+  // if (name.length > 1 && name[0] === '_' && name[1] === '_') {
+  //   return new GraphQLError('Name "' + name + '" must not begin with "__", which is reserved by ' + 'GraphQL introspection.', node);
+  // }
   if (!NAME_RX.test(name)) {
     return new GraphQLError('Names must match /^[_a-zA-Z][_a-zA-Z0-9]*$/ but "' + name + '" does not.', node);
   }",
      },
    ],
    "path": "node_modules/graphql/utilities/assertValidName.mjs",
    "type": "patch",
  },
]
`;

exports[`the patch parser works 1`] = `
[
  {
    "fromPath": "numbers.txt",
    "toPath": "banana.txt",
    "type": "rename",
  },
  {
    "newMode": 493,
    "oldMode": 420,
    "path": "banana.txt",
    "type": "mode change",
  },
  {
    "afterHash": "92d2c5f",
    "beforeHash": "fbf1785",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 4,
            "start": 1,
          },
          "patched": {
            "length": 4,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "one",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "ne",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "",
              "two",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
        "source": "@@ -1,4 +1,4 @@
-one
+ne

 two
",
      },
    ],
    "path": "banana.txt",
    "type": "patch",
  },
]
`;

exports[`the patch parser works 2`] = `
[
  {
    "afterHash": "842652c",
    "beforeHash": "2de83dd",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 5,
            "start": 1,
          },
          "patched": {
            "length": 5,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "this",
              "is",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "a",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "file",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
        "source": "@@ -1,5 +1,5 @@
 this
 is

-a
+
 file",
      },
    ],
    "path": "banana.ts",
    "type": "patch",
  },
]
`;

exports[`the patch parser works 3`] = `
[
  {
    "fromPath": "numbers.txt",
    "toPath": "banana.txt",
    "type": "rename",
  },
  {
    "newMode": 493,
    "oldMode": 420,
    "path": "banana.txt",
    "type": "mode change",
  },
  {
    "afterHash": "92d2c5f",
    "beforeHash": "fbf1785",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 4,
            "start": 1,
          },
          "patched": {
            "length": 4,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "one",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "ne",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "",
              "two",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
        "source": "@@ -1,4 +1,4 @@
-one
+ne

 two
",
      },
    ],
    "path": "banana.txt",
    "type": "patch",
  },
]
`;

exports[`the patch parser works for a simple case 1`] = `
[
  {
    "afterHash": "842652c",
    "beforeHash": "2de83dd",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 5,
            "start": 1,
          },
          "patched": {
            "length": 5,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "this",
              "is",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "a",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "file",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
        "source": "@@ -1,5 +1,5 @@
 this
 is

-a
+
 file",
      },
    ],
    "path": "banana.ts",
    "type": "patch",
  },
]
`;
